--- a/apps/users/templates/email.html
+++ b/apps/users/templates/email.html
@@ -12,7 +12,7 @@
                  class="CToWUd" data-bit="iit">
         </div>
         <div>
-            <h1>Добро пожаловать в Botcommerce. ({{ user.first_name }})</h1>
+            <h1>Добро пожаловать в Botcommerce. ({{ first_name }})</h1>
             <p>Чтобы начать использовать, пожалуйста, подтвердите свой адрес электронной почты, нажав на кнопку
                 ниже.</p><br>
 
